--- a/layout/main.css
+++ b/layout/main.css
@@ -88,3 +88,19 @@ h1 {
 footer {
   font-size: 1.5vw;
 }
+
+#feed ul {
+  list-style: none;
+  display: inline;
+}
+
+#feed li {
+  display: inline-block;
+  margin: 10px 10px 10px 10px;
+}
+
+#divRss br {
+  display: inline;
+  margin-left: 10px;
+  margin-right: 10px;
+}
