Add basic video playback

--- a/layout/main.css
+++ b/layout/main.css
@@ -50,6 +50,7 @@ h1, h2, p {
 
 #current_number {
   font-size: 20vw;
+  font-weight: bold;
 }
 
 .sidebar ul {
@@ -108,5 +109,7 @@ h1 {
   text-align: center;
 }
 
-video {
+#desk_number {
+  font-size: 6.1vw;
+  font-weight: bold;
 }
